# regex-c

./: CMakeLists.txt  README.md  main.c
engine/: engine.h  match.c  parse.c  print.c  util.c
examples/: ir_example_0.txt
src/: find.c  find.h  main.c  match.c  match.h  nfa.c  nfa.h  state.c  state.h  test.c  test.h
